Fix 1 border spacing issue with search entry

--- a/data/resources/css/terminix.adwaita.css
+++ b/data/resources/css/terminix.adwaita.css
@@ -3,6 +3,11 @@
     border-width: 1px 0 0 0;
 }
 
+.terminix-search-entry {
+    padding-bottom: 6px;
+    padding-top: 6px;
+}
+
 .terminix-notification-counter {
     background-color: @theme_fg_color;
     color: @theme_bg_color;
